<resources>
    <!-- Icons resources -->
    <string name="app_name">Lift Tracker</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- layout.nav_header_main.xml -->
    <string name="nav_header_title">Lift Tracker</string>
    <string name="nav_header_subtitle">Hello, %1s!</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- menu.activity_main_drawer.xml -->
    <string name="menu_exercise">Log Exercise</string>
    <string name="menu_graphs">Graphs</string>
    <string name="menu_percentage">Percentages</string>
    <string name="menu_plates">Plates</string>

    <!-- LoginActivity -->
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login or register</string>
    <string name="action_sign_in_short">Login</string>
    <string name="action_register">Register</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <!-- RegisterActivity -->
    <string name="register_title">Register</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="submit">Submit</string>

    <!-- Plates Fragment -->
    <string name="plate_type">Plates</string>
    <string name="per_side">Each Side</string>
    <string name="total_weight">Total Weight: %1$d</string>
    <string name="weight">WEIGHT</string>
    <string name="barbell">BARBELL</string>
    <string name="plate_hold">LBS</string>
    <string name="plate_num">#</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="calc_info">Desired weight: %1d\nCalculated weight: %2d</string>

    <!-- Percentages Fragment -->
    <string name="percentage">Percentage</string>
    <string name="weight_per">Weight</string>
    <string name="reps">Reps</string>
    <string name="exer_hold">Exercise</string>
    <string name="percent_info">One rep max: %1d\n*Calculated weight is rounded</string>
    <string name="rounded">*Calculated weight is rounded</string>

    <!-- Exercise Fragment -->
    <string name="reps_caps">REPS</string>
    <string name="rep_cap_notify">Set has more than 10 reps.\nThe set will be excluded from 1RM.\n<a href="http://www.weightrainer.net/training/coefficients.html">Brzycki Formula</a></string>
    <string name="add_set_info">*Add exercise, weight, and reps.</string>
    <string name="add_set">Add Set</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="prompt_email">Email</string>


</resources>