<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_exercise"
            android:icon="@drawable/menu_exercise"
            android:title="@string/menu_exercise" />
        <item
            android:id="@+id/nav_graphs"
            android:icon="@drawable/menu_graphs"
            android:title="@string/menu_graphs" />
        <item
            android:id="@+id/nav_percentages"
            android:icon="@drawable/menu_percentage"
            android:title="@string/menu_percentage" />
        <item
            android:id="@+id/nav_plates"
            android:icon="@drawable/menu_plates"
            android:title="@string/menu_plates" />
    </group>
</menu>