<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".ui.percentagecalculator.PercentageFragment">

    <Spinner
        android:id="@+id/exercise_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:spinnerMode="dropdown"
        android:background="@drawable/round_bg_rec"
        android:popupBackground="@color/grey"/>

    <TextView
        android:id="@+id/or"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"
        android:textAlignment="center"
        android:textSize="20sp"
        android:text="OR" />

    <LinearLayout
        android:id="@+id/weight_change"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="10dp"
        android:background="@drawable/round_bg_rec">

        <Button
            android:id="@+id/weight_minus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minus"
            style="@style/Widget.AppCompat.Button.Borderless" />

        <EditText
            android:id="@+id/weight_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/weight"
            android:textColorHint="@color/white"
            android:selectAllOnFocus="true"
            android:inputType="numberDecimal"
            android:maxLength="8"
            android:textColor="@color/white"
            style="@style/Widget.AppCompat.EditText" />

        <Button
            android:id="@+id/weight_plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plus"
            style="@style/Widget.AppCompat.Button.Borderless" />
    </LinearLayout>

    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        layout="@layout/percentages_table" />

    <TextView
        android:id="@+id/text_percentage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textAlignment="center"
        android:textSize="20sp" />

</LinearLayout>