<?xml version="1.0" encoding="utf-8"?>

<TableLayout
    android:id="@+id/plate_table"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:background="@drawable/boarder_rec">

    <TableRow
        android:id="@+id/column_headers"
        android:layout_width="match_parent"
        android:layout_height="0dp" >

        <TextView
            android:id="@+id/percentage"
            android:text="@string/percentage"
            android:layout_weight="1"
            android:background="@color/white"
            android:textColor="@color/black"
            android:textStyle="italic"
            android:padding="11.5dip"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="2dp"
            android:textAllCaps="true"/>

        <TextView
            android:id="@+id/per_weight"
            android:text="@string/weight_per"
            android:layout_weight="1"
            android:background="@color/white"
            android:textColor="@color/black"
            android:textStyle="italic"
            android:padding="11.5dip"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:textAllCaps="true"/>

        <TextView
            android:id="@+id/reps"
            android:text="@string/reps"
            android:layout_weight=".6"
            android:background="@color/white"
            android:textColor="@color/black"
            android:textStyle="italic"
            android:padding="11.5dip"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:textAllCaps="true"/>

    </TableRow>

    <include
        android:id="@+id/per_95"
        layout="@layout/percentages_row" />
    <include
        android:id="@+id/per_92"
        layout="@layout/percentages_row" />
    <include
        android:id="@+id/per_90"
        layout="@layout/percentages_row" />
    <include
        android:id="@+id/per_87"
        layout="@layout/percentages_row" />
    <include
        android:id="@+id/per_85"
        layout="@layout/percentages_row" />
    <include
        android:id="@+id/per_82"
        layout="@layout/percentages_row" />
    <include
        android:id="@+id/per_80"
        layout="@layout/percentages_row" />
    <include
        android:id="@+id/per_77"
        layout="@layout/percentages_row" />
    <include
        android:id="@+id/per_75"
        layout="@layout/percentages_row" />

</TableLayout>